# fast_zero

./: .coverage  .dockerignore  .env  .gitignore  Dockerfile  README.md  compose.yaml  database.db  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  database.py  models.py  security.py
fast_zero/routers/: auth.py  todo.py  users.py
migrations/: env.py
migrations/versions/: 148c10fa1199_create_todos_table.py  277c2bc15b3d_create_users_table.py  3b90bb1d5c2c_migracao_para_atualizacao_da_tabela_.py  c3d1fb68c65d_exercicio_02_aula_04.py
tests/: _test_app_exercicio.py  conftest.py  test_app.py  test_app_exercicio.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
